--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "deploy": "script/deploy",
     "heroku-token": "script/encrypt-heroku-auth-token.js",
     "test2": "react-scripts test",
-    "test": "mocha --watch \"./tests/*.spec.js\" --require @babel/register",
+    "test": "mocha --watch",
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@firebase/testing": "^0.19.3",
     "axios": "^0.19.0",
     "firebase": "^6.2.0",
     "moment": "^2.24.0",
+    "pg": "^7.4.3",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
@@ -31,7 +33,6 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-firestore": "^0.8.0",
     "redux-logger": "^3.0.6",
-    "pg": "^7.4.3",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
