--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "script/deploy",
     "heroku-token": "script/encrypt-heroku-auth-token.js",
     "test2": "react-scripts test",
-    "test": "mocha --watch",
+    "test": "mocha --watch --require @babel/register",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -33,7 +33,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-firestore": "^0.8.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -51,8 +52,12 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "axios-mock-adapter": "^1.16.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.2.0",
     "mocha": "^6.2.2"
   },
