--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@firebase/testing": "^0.19.3",
     "axios": "^0.19.0",
     "firebase": "^6.2.0",
+    "firebase-admin": "^8.12.1",
     "moment": "^2.24.0",
     "pg": "^7.4.3",
     "react": "^16.8.6",
